Prevent text next to speaker-photo from wrapping. Added a CSS class for that purpose.

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -130,6 +130,10 @@ ol.breadcrumb {
     margin-right: 50px;
 }
 
+.speaker-bio p {
+    overflow: hidden;
+}
+
 .quizdown-progress, .quizdown-credits, .svelte-1l9r9uu, .quizdown-button-row span {
     display: none;
 }
